--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -138,6 +138,7 @@ Lecture slides:
 
 - Data: [life_expectancy.csv](./data/life_expectancy.csv) | [codebook](./data/life_expectancy_codebook.pdf)
 - R code: [Class 7 script](./slides/EDUC641_7_code.R) | [Class 9 script](./slides/EDUC641_9_code.R)
+- Lab activities: [Week 5 lab](./labs/Lab5.docx)
 
 Assignment 3: 
 
